tests/sksl/errors/ReservedNameExternal.glsl
### Compilation failed:

error: 1: name 'external' is reserved
int external;
    ^^^^^^^^
1 error
